samples/_failures_safe/1761544857_203bca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad6a7424.c: In function ‘main’:
./samples/SAFE/__tmp_ad6a7424.c:153:20: error: missing terminating " character
  153 |             printf("
      |                    ^
./samples/SAFE/__tmp_ad6a7424.c:153:13: error: expected expression at end of input
  153 |             printf("
      |             ^~~~~~
./samples/SAFE/__tmp_ad6a7424.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ad6a7424.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ad6a7424.c:153:13: error: expected declaration or statement at end of input
